--- a/rules.html
+++ b/rules.html
@@ -17,7 +17,7 @@
   <a href="rules.html" class="active">Правила</a>
 </nav>
   <div class="content-wrapper">
-    <div class="main-content rules-content">
+    <div class="rules-item">
       <h1>Правила сервера</h1>
       <p>Пункты могут дополняться, видоизменяться в зависимости от ситуации. Следите внимательно за новостями и не забывайте, что не знание не освобождает от наказания!</p>
       <h2 class="rules-section-title">▶ ПРАВИЛА ДИСКОРД СЕРВЕРА</h2>
