Адаптация для мобильных устройств

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <span class="server-ip-value">62.60.230.20</span>
           </div>
         </div>
+        <div class="main-right">
+          <img src="news-images/2025-04-08_15.36.40.png" alt="Скриншот сервера" class="main-image-cropped" />
+        </div>
       </div>
     </div>
   </div>
