--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
             <span class="server-ip-value">62.60.230.20</span>
           </div>
         </div>
-        <div class="main-right">
-          <img src="news-images/2025-04-08_15.36.40.png" alt="Скриншот сервера" class="main-image-cropped" />
-        </div>
+        <!-- main-right удалён для главной -->
       </div>
     </div>
   </div>
