--- a/rules.html
+++ b/rules.html
@@ -16,6 +16,14 @@
   <a href="news.html">Новости</a>
   <a href="rules.html" class="active">Правила</a>
 </nav>
+<nav class="top-nav">
+  <div class="logo-wrapper">
+    <img src="icon.png" alt="Иконка сервера" class="server-icon" />
+  </div>
+  <a href="index.html">Главная</a>
+  <a href="news.html">Новости</a>
+  <a href="rules.html" class="active">Правила</a>
+</nav>
   <div class="content-wrapper">
     <div class="rules-item">
       <h1>Правила сервера</h1>
