--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
   <a href="news.html">Новости</a>
   <a href="rules.html">Правила</a>
 </nav>
-
+<nav class="top-nav">
+  <div class="logo-wrapper">
+    <img src="icon.png" alt="Иконка сервера" class="server-icon" />
+  </div>
+  <a href="index.html" class="active">Главная</a>
+  <a href="news.html">Новости</a>
+  <a href="rules.html">Правила</a>
+</nav>
 <div class="content-wrapper">
   <div class="main-content main-content-bgimg">
     <div class="main-content-overlay">
@@ -35,7 +42,6 @@
             <span class="server-ip-value">62.60.230.20</span>
           </div>
         </div>
-        <!-- main-right удалён для главной -->
       </div>
     </div>
   </div>
