--- a/news.html
+++ b/news.html
@@ -17,6 +17,14 @@
   <a href="news.html" class="active">Новости</a>
   <a href="rules.html">Правила</a>
 </nav>
+<nav class="top-nav">
+  <div class="logo-wrapper">
+    <img src="icon.png" alt="Иконка сервера" class="server-icon" />
+  </div>
+  <a href="index.html">Главная</a>
+  <a href="news.html" class="active">Новости</a>
+  <a href="rules.html">Правила</a>
+</nav>
   <div class="content-wrapper">
     <div class="main-content">
       <h1>Новости сервера</h1>
