--- a/guide.html
+++ b/guide.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Новости сервера</title>
+  <title>Гайд — Немного о модах</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icon.png" type="image/png" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
@@ -14,8 +14,8 @@
     <img src="icon.png" alt="Иконка сервера" class="server-icon" />
   </div>
   <a href="index.html">Главная</a>
-  <a href="news.html" class="active">Новости</a>
-  <a href="guide.html">Гайд</a>
+  <a href="news.html">Новости</a>
+  <a href="guide.html" class="active">Гайд</a>
   <a href="rules.html">Правила</a>
 </nav>
 <nav class="top-nav">
@@ -23,19 +23,19 @@
     <img src="icon.png" alt="Иконка сервера" class="server-icon" />
   </div>
   <a href="index.html">Главная</a>
-  <a href="news.html" class="active">Новости</a>
-  <a href="guide.html">Гайд</a>
+  <a href="news.html">Новости</a>
+  <a href="guide.html" class="active">Гайд</a>
   <a href="rules.html">Правила</a>
 </nav>
   <div class="content-wrapper">
     <div class="main-content">
-      <h1>Новости сервера</h1>
-      <div id="news-container">Загрузка новостей...</div>
+      <h1>Гайд: Немного о модах</h1>
+      <div id="guide-container">Загрузка...</div>
       <footer>
         <p>© Любители приключений, 2025</p>
       </footer>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="guide.js"></script>
 </body>
 </html>
