--- a/rules.html
+++ b/rules.html
@@ -14,6 +14,7 @@
   </div>
   <a href="index.html">Главная</a>
   <a href="news.html">Новости</a>
+  <a href="guide.html">Гайд</a>
   <a href="rules.html" class="active">Правила</a>
 </nav>
 <nav class="top-nav">
@@ -22,6 +23,7 @@
   </div>
   <a href="index.html">Главная</a>
   <a href="news.html">Новости</a>
+  <a href="guide.html">Гайд</a>
   <a href="rules.html" class="active">Правила</a>
 </nav>
   <div class="content-wrapper">
