--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
   <a href="news.html">Новости</a>
   <a href="guide.html">Гайд</a>
   <a href="rules.html">Правила</a>
-</nav>
+ </nav>
 <nav class="top-nav">
   <div class="logo-wrapper">
     <img src="icon.png" alt="Иконка сервера" class="server-icon" />
   </div>
-  <a href="index.html" class="active">Главная</a>
-  <a href="news.html">Новости</a>
-  <a href="guide.html">Гайд</a>
-  <a href="rules.html">Правила</a>
+  <div class="top-nav-scroll">
+    <a href="index.html" class="active">Главная</a>
+    <a href="news.html">Новости</a>
+    <a href="guide.html">Гайд</a>
+    <a href="rules.html">Правила</a>
+  </div>
 </nav>
+
 <div class="content-wrapper">
   <div class="main-content main-content-bgimg">
     <div class="main-content-overlay">
