--- a/rules.html
+++ b/rules.html
@@ -16,15 +16,17 @@
   <a href="news.html">Новости</a>
   <a href="guide.html">Гайд</a>
   <a href="rules.html" class="active">Правила</a>
-</nav>
+ </nav>
 <nav class="top-nav">
   <div class="logo-wrapper">
     <img src="icon.png" alt="Иконка сервера" class="server-icon" />
   </div>
-  <a href="index.html">Главная</a>
-  <a href="news.html">Новости</a>
-  <a href="guide.html">Гайд</a>
-  <a href="rules.html" class="active">Правила</a>
+  <div class="top-nav-scroll">
+    <a href="index.html">Главная</a>
+    <a href="news.html">Новости</a>
+    <a href="guide.html">Гайд</a>
+    <a href="rules.html" class="active">Правила</a>
+  </div>
 </nav>
   <div class="content-wrapper">
     <div class="rules-item">
