--- a/news.html
+++ b/news.html
@@ -22,10 +22,12 @@
   <div class="logo-wrapper">
     <img src="icon.png" alt="Иконка сервера" class="server-icon" />
   </div>
-  <a href="index.html">Главная</a>
-  <a href="news.html" class="active">Новости</a>
-  <a href="guide.html">Гайд</a>
-  <a href="rules.html">Правила</a>
+  <div class="top-nav-scroll">
+    <a href="index.html">Главная</a>
+    <a href="news.html"  class="active">Новости</a>
+    <a href="guide.html">Гайд</a>
+    <a href="rules.html">Правила</a>
+  </div>
 </nav>
   <div class="content-wrapper">
     <div class="main-content">
